--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   <section class="side">
     <div class="con">
       <p class="menu8">
-        <a href="#" >
-        <em>99. Hyun-Jin Ryu</em>
-        <img src="img/logo.png" alt="img01"></a>
+        <img src="img/chic.png" alt="img01">
+        <a href="#">
+        <em>99. Hyun-Jin Ryu</em></a>
       </p>
       <p class="menu9">
         <a href="#">
